--- a/new-testing/input/gels_hqr.in
+++ b/new-testing/input/gels_hqr.in
@@ -16,6 +16,7 @@
 # hlv: Tree used for high level reduction between nodes, only if qrp > 1
 # domino: Enable/Disable the domino between upper and lower trees
 
+op = gels_hqr
 nb = 8, 9
 ib = 3
 m = 17, 31, 35
