--- a/new-testing/input/geqrf_hqr.in
+++ b/new-testing/input/geqrf_hqr.in
@@ -14,6 +14,7 @@
 # hlv: Tree used for high level reduction between nodes, only if qrp > 1
 # domino: Enable/Disable the domino between upper and lower trees
 
+op = geqrf_hqr
 nb = 8, 9
 ib = 3
 m = 13, 17, 57
