--- a/new-testing/input/lascal.in
+++ b/new-testing/input/lascal.in
@@ -10,6 +10,7 @@
 # uplo: Part of the matrix to be copied (0 for Upper, 1 for Lower and 2 for UpperLower)
 # alpha: Scale to apply
 
+op = lascal
 nb = 16, 17
 ib = 8
 m = 15, 19, 33
