--- a/new-testing/input/orglq.in
+++ b/new-testing/input/orglq.in
@@ -11,6 +11,7 @@
 # lda: Leading dimension of matrix Q and A
 # RH: Size of each subdomain when using RH
 
+op = orglq
 nb = 16, 17
 ib = 8
 m = 15, 19, 33
