--- a/new-testing/input/ormlq_hqr.in
+++ b/new-testing/input/ormlq_hqr.in
@@ -17,6 +17,7 @@
 # hlv: Tree used for high level reduction between nodes, only if qrp > 1
 # domino: Enable/Disable the domino between upper and lower trees
 
+op = ormlq_hqr
 nb = 16, 17
 ib = 3
 n = 15, 20, 32
