--- a/new-testing/input/unmqr_hqr.in
+++ b/new-testing/input/unmqr_hqr.in
@@ -17,6 +17,7 @@
 # hlv: Tree used for high level reduction between nodes, only if qrp > 1
 # domino: Enable/Disable the domino between upper and lower trees
 
+op = unmqr_hqr
 nb = 8, 9
 ib = 3
 m = 15, 20
