--- a/example/link_chameleon/CMakeLists.txt
+++ b/example/link_chameleon/CMakeLists.txt
@@ -49,7 +49,7 @@ if (CHAMELEON_DISTRIB_DIR)
     if (CHAMELEON_CHAMELEON_USE_QUARK)
         find_package(CHAMELEON COMPONENTS QUARK)
     else()
-        find_package(CHAMELEON COMPONENTS STARPU MPI CUDA FXT)
+        find_package(CHAMELEON COMPONENTS STARPU MPI CUDA)
     endif()
     if (CHAMELEON_FOUND)
         link_directories(${CHAMELEON_LIBRARY_DIRS_DEP})
