--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -540,7 +540,7 @@ else (NOT CHAMELEON_SIMULATION)
             list(APPEND MPI_CXX_INCLUDE_PATH "${SIMGRID_INCLUDE_DIRS}/smpi")
         endif()
         if(NOT MPI_Fortran_COMPILER)
-            set(MPI_Fortran_COMPILER "${SIMGRID_DIR_FOUND}/bin/smpicxx")
+            set(MPI_Fortran_COMPILER "${SIMGRID_DIR_FOUND}/bin/smpif90")
         endif()
         if(NOT MPI_Fortran_LIBRARIES)
             set(MPI_Fortran_LIBRARIES "${SIMGRID_LIBRARIES}")
