--- a/.gitlab/bench_plafrim.yml
+++ b/.gitlab/bench_plafrim.yml
@@ -1,29 +1,42 @@
-bench_plafrim_bora:
-  stage: test
-  tags: ['plafrim']
-  before_script:
-    - git submodule update --init --recursive
-  script:
-    - ./tools/bench/plafrim/bora/run.sh
-  only:
-    - schedules
+---
+bench_plafrim_bora_openmpi:
+  variables:
+    NODE: bora
+    MPI: openmpi
+    SLURM_NP: 9
+    JUBE_ID: "000001"
+  extends: .bench_plafrim_common
 
-.bench_plafrim_miriel:
-  stage: test
-  tags: ['plafrim']
-  before_script:
-    - git submodule update --init --recursive
-  script:
-    - ./tools/bench/plafrim/miriel/run.sh
-  only:
-    - schedules
+bench_plafrim_miriel_openmpi:
+  variables:
+    NODE: miriel
+    MPI: openmpi
+    SLURM_NP: 9
+    JUBE_ID: "000002"
+  extends: .bench_plafrim_common
 
-.bench_plafrim_sirocco:
-  stage: test
-  tags: ['plafrim']
-  before_script:
-    - git submodule update --init --recursive
-  script:
-    - ./tools/bench/plafrim/sirocco/run.sh
-  only:
-    - schedules
+# Nmad segfaults for now, waiting for a stable version
+.bench_plafrim_bora_nmad:
+  variables:
+    NODE: bora
+    MPI: nmad
+    SLURM_NP: 9
+    JUBE_ID: "000003"
+  extends: .bench_plafrim_common
+
+.bench_plafrim_miriel_nmad:
+  variables:
+    NODE: miriel
+    MPI: nmad
+    SLURM_NP: 9
+    JUBE_ID: "000004"
+  extends: .bench_plafrim_common
+
+# Chameleon+CUDA in Guix is not working yet
+.bench_plafrim_sirocco_openmpi:
+  variables:
+    NODE: sirocco
+    MPI: openmpi
+    SLURM_NP: 1
+    JUBE_ID: "000005"
+  extends: .bench_plafrim_common
