--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -95,6 +95,7 @@ set(ZSRC
   # testing_zgeqrs_hqr.c
   # testing_zgelqs_hqr.c
   testing_zgels_hqr.c
+  testing_zplrnk.c
   )
 
 # Add include and link directories
