--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -656,6 +656,10 @@ if( CHAMELEON_SCHED_STARPU )
             set(CHAMELEON_USE_MIGRATE "OFF")
             message("-- ${Blue}CHAMELEON_USE_MIGRATE is turned OFF because starpu_mpi_data_migrate not found${ColourReset}")
         endif()
+        check_function_exists(starpu_mpi_interface_datatype_register HAVE_STARPU_MPI_INTERFACE_DATATYPE_REGISTER)
+        if ( HAVE_STARPU_MPI_INTERFACE_DATATYPE_REGISTER )
+            message("-- ${Blue}Add definition HAVE_STARPU_MPI_INTERFACE_DATATYPE_REGISTER${ColourReset}")
+        endif()
         check_function_exists(starpu_interface_copy2d HAVE_STARPU_INTERFACE_COPY2D)
         if ( HAVE_STARPU_INTERFACE_COPY2D )
             message("-- ${Blue}Add definition HAVE_STARPU_INTERFACE_COPY2D${ColourReset}")
