starpu: use starpu_mpi_wait_for_all when available
starpu_mpi_barrier is not really supposed to properly synchronize with STF.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -645,6 +645,10 @@ if( CHAMELEON_SCHED_STARPU )
         if ( HAVE_STARPU_MPI_INIT_CONF )
             message("-- ${Blue}Add definition HAVE_STARPU_MPI_INIT_CONF${ColourReset}")
         endif()
+        check_function_exists(starpu_mpi_wait_for_all HAVE_STARPU_MPI_WAIT_FOR_ALL)
+        if ( HAVE_STARPU_MPI_WAIT_FOR_ALL )
+            message("-- ${Blue}Add definition HAVE_STARPU_MPI_WAIT_FOR_ALL${ColourReset}")
+        endif()
         check_function_exists(starpu_mpi_data_migrate HAVE_STARPU_MPI_DATA_MIGRATE)
         if ( HAVE_STARPU_MPI_DATA_MIGRATE )
             message("-- ${Blue}Add definition HAVE_STARPU_MPI_DATA_MIGRATE${ColourReset}")
