specify a specific time limit that can exceed the project-level timeout, jobs submitted on a supercomputer like plafrim can be delayed due to the job scheduler, one week seems fair because we want this profiling done once a week

--- a/.gitlab/common.yml
+++ b/.gitlab/common.yml
@@ -69,6 +69,7 @@
     - schedules
   stage: test
   tags: ['plafrim']
+  timeout: 1 week
   before_script:
     - git submodule update --init --recursive
   script:
