--- a/testing/input/hemm.in
+++ b/testing/input/hemm.in
@@ -15,6 +15,8 @@
 # beta: Scalar beta
 # bump: bump value for Hermitian matrices
 
+alpha = 0., 3.45
+beta = 0., -4.86
 op = hemm
 nb = 16, 17
 ib = 8
