--- a/testing/input/lascal.in
+++ b/testing/input/lascal.in
@@ -10,6 +10,7 @@
 # uplo: Part of the matrix to be copied (0 for Upper, 1 for Lower and 2 for UpperLower)
 # alpha: Scale to apply
 
+alpha = 0., 3.45
 op = lascal
 nb = 16, 17
 ib = 8
