--- a/testing/input/syrk.in
+++ b/testing/input/syrk.in
@@ -14,6 +14,8 @@
 # beta: Scalar beta
 # bump: Bump value for symmetric matrices
 
+alpha = 0., 3.45
+beta = 0., -4.86
 op = syrk
 nb = 16, 17
 ib = 8
