--- a/runtime/quark/CMakeLists.txt
+++ b/runtime/quark/CMakeLists.txt
@@ -27,6 +27,57 @@
 ###
 cmake_minimum_required(VERSION 2.8)
 
+find_package( QUARK REQUIRED
+  COMPONENTS HWLOC )
+
+# Add definition and include_dir if found
+if(QUARK_FOUND)
+  message("-- ${Blue}Add definition CHAMELEON_SCHED_QUARK"
+    " - Activate QUARK in Chameleon${ColourReset}")
+  if (QUARK_INCLUDE_DIRS_DEP)
+    include_directories(${QUARK_INCLUDE_DIRS_DEP})
+  endif()
+  if(QUARK_CFLAGS_OTHER_DEP)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${QUARK_CFLAGS_OTHER_DEP}")
+    string(REPLACE ";" " " CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
+  endif()
+  if(QUARK_LDFLAGS_OTHER_DEP)
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${QUARK_LDFLAGS_OTHER_DEP}")
+    string(REPLACE ";" " " CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
+  endif()
+  if(QUARK_LIBRARY_DIRS_DEP)
+    list(APPEND CMAKE_INSTALL_RPATH "${QUARK_LIBRARY_DIRS_DEP}")
+  endif()
+  if (QUARK_LIBRARIES_DEP)
+    list(INSERT CHAMELEON_DEP 0 ${QUARK_LIBRARIES_DEP})
+  endif()
+else(QUARK_FOUND)
+  if(CHAMELEON_VERBOSE_FIND_PACKAGE)
+    if(NOT HWLOC_FOUND OR NOT HWLOC_LIBRARIES)
+      if (NOT HWLOC_hwloc.h_DIRS)
+        Print_Find_Header_Status(hwloc hwloc.h)
+      endif ()
+      if (NOT HWLOC_hwloc_LIBRARY)
+        Print_Find_Library_Status(hwloc libhwloc)
+      endif ()
+    endif()
+    if (NOT QUARK_quark.h_DIRS)
+      Print_Find_Header_Status(quark quark.h)
+    endif ()
+    if (NOT QUARK_quark_LIBRARY)
+      Print_Find_Library_Status(quark libquark)
+    endif ()
+  else()
+    message(WARNING "QUARK library has not been found and CHAMELEON_VERBOSE_FIND_PACKAGE is set to OFF."
+      " Try to activate CHAMELEON_VERBOSE_FIND_PACKAGE option (-DCHAMELEON_VERBOSE_FIND_PACKAGE=ON) to get some hints for the detection")
+  endif()
+  if(NOT HWLOC_FOUND OR NOT HWLOC_LIBRARIES)
+    message(FATAL_ERROR "hwloc library is required but has not been found")
+  endif()
+  message(FATAL_ERROR "QUARK library is required but has not been found")
+  return()
+endif(QUARK_FOUND)
+
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/include )
 include_directories( ${CMAKE_CURRENT_BINARY_DIR}/include )
 
