--- a/runtime/parsec/CMakeLists.txt
+++ b/runtime/parsec/CMakeLists.txt
@@ -27,6 +27,82 @@
 ###
 cmake_minimum_required(VERSION 2.8)
 
+# create list of components in order to make a single call to find_package(starpu...)
+set(PARSEC_COMPONENT_LIST "HWLOC")
+if(CHAMELEON_USE_MPI)
+  list(APPEND PARSEC_COMPONENT_LIST "MPI")
+endif()
+if(CHAMELEON_USE_CUDA)
+  list(APPEND PARSEC_COMPONENT_LIST "CUDA")
+endif()
+
+find_package( PARSEC REQUIRED
+  COMPONENTS ${PARSEC_COMPONENT_LIST} )
+
+if(PARSEC_FOUND)
+  message("-- ${Blue}Add definition CHAMELEON_SCHED_PARSEC"
+    " - Activate PaRSEC in Chameleon${ColourReset}")
+  if (PARSEC_INCLUDE_DIRS_DEP)
+    include_directories(${PARSEC_INCLUDE_DIRS_DEP})
+  endif()
+  if(PARSEC_CFLAGS_OTHER_DEP)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${PARSEC_CFLAGS_OTHER_DEP}")
+    string(REPLACE ";" " " CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
+  endif()
+  if(PARSEC_LDFLAGS_OTHER_DEP)
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${PARSEC_LDFLAGS_OTHER_DEP}")
+    string(REPLACE ";" " " CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
+  endif()
+  if(PARSEC_LIBRARY_DIRS_DEP)
+    list(APPEND CMAKE_INSTALL_RPATH "${PARSEC_LIBRARY_DIRS_DEP}")
+  endif()
+  if (PARSEC_LIBRARIES_DEP)
+    list(INSERT CHAMELEON_DEP 0 ${PARSEC_LIBRARIES_DEP})
+  endif()
+  string(REPLACE ";" " " CMAKE_REQUIRED_FLAGS "${CMAKE_REQUIRED_FLAGS}")
+  # to test if symbols exist, e.g.
+  # set(CMAKE_REQUIRED_INCLUDES "${PARSEC_INCLUDE_DIRS_DEP}")
+  # set(CMAKE_REQUIRED_FLAGS "${PARSEC_CFLAGS_OTHER_DEP}")
+  # set(CMAKE_REQUIRED_LDFLAGS "${PARSEC_LDFLAGS_OTHER_DEP}")
+  # set(CMAKE_REQUIRED_LIBRARIES "${PARSEC_LIBRARIES_DEP}")
+  # check_function_exists(parsec_init HAVE_PARSEC_INIT)
+else ( PARSEC_FOUND )
+  if(CHAMELEON_VERBOSE_FIND_PACKAGE)
+    if(NOT HWLOC_FOUND OR NOT HWLOC_LIBRARIES)
+      if (NOT HWLOC_hwloc.h_DIRS)
+        Print_Find_Header_Status(hwloc hwloc.h)
+      endif ()
+      if (NOT HWLOC_hwloc_LIBRARY)
+        Print_Find_Library_Status(hwloc libhwloc)
+      endif ()
+    endif()
+    if( (NOT PARSEC_FOUND) OR (NOT PARSEC_LIBRARIES_DEP) )
+      foreach(parsec_hdr ${PARSEC_hdrs_to_find})
+        if (NOT PARSEC_${parsec_hdr}_INCLUDE_DIRS)
+          Print_Find_Header_Status(parsec ${parsec_hdr})
+        endif ()
+      endforeach()
+      if(PARSEC_VERSION_STRING)
+        foreach(parsec_lib ${PARSEC_libs_to_find})
+          if (NOT PARSEC_${parsec_lib}_LIBRARY)
+            Print_Find_Library_Status(parsec ${parsec_lib})
+          endif ()
+        endforeach()
+      endif()
+    endif()
+  else(CHAMELEON_VERBOSE_FIND_PACKAGE)
+    message(WARNING "PaRSEC library has not been found and CHAMELEON_VERBOSE_FIND_PACKAGE is set to OFF."
+      " Try to activate CHAMELEON_VERBOSE_FIND_PACKAGE option (-DCHAMELEON_VERBOSE_FIND_PACKAGE=ON) to get some hints for the detection")
+  endif(CHAMELEON_VERBOSE_FIND_PACKAGE)
+  if(NOT HWLOC_FOUND OR NOT HWLOC_LIBRARIES)
+    message(FATAL_ERROR "hwloc library is required but has not been found")
+  endif()
+  if( (NOT PARSEC_FOUND) OR (NOT PARSEC_LIBRARIES_DEP) )
+    message(FATAL_ERROR "PaRSEC library is required but has not been found")
+  endif()
+  return()
+endif ( PARSEC_FOUND )
+
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/include )
 include_directories( ${CMAKE_CURRENT_BINARY_DIR}/include )
 
